<resources>
    <string name="app_name">eWise Money</string>
    <string name="action_settings">Settings</string>
    <string name="action_changepin">Change PIN</string>
    <string name="action_group_category">By category</string>
    <string name="action_group_provider">By provider</string>
    <string name="section_name_accounts">Accounts</string>
    <string name="section_name_spending">Spending</string>
    <string name="section_name_goals">Goals</string>
    <string name="section_name_peers">Peers</string>
    <string name="section_name_networth">Networth</string>
    <string name="section_name_providers">Providers</string>
    <string name="section_name_unknown">Unknown</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_format_2">Add institution section: %1$d</string>
    <string name="menu_name_accounts">Accounts</string>
    <string name="menu_name_spending">Spending</string>
    <string name="menu_name_goals">Goals</string>
    <string name="menu_name_peers">Peers</string>
    <string name="menu_name_networth">Networth</string>
    <string name="menu_name_providers">Providers</string>
    <string name="menu_name_transfer">Transfer funds</string>
    <string name="menu_name_bills">Bills</string>
    <string name="menu_name_sendissue">Report an issue</string>
    <string name="menu_name_permissions">Permissions</string>
    <string name="menu_name_settings">Settings</string>
    <string name="menu_name_help">Help &amp; feedback</string>
    <string name="menu_name_logout">Logout</string>
    <string name="nav_header_profile_label">Select your profile</string>
    <string name="nav_header_user_prelogin_text">Not logged in</string>
    <string name="nav_header_email_prelogin_text">Not logged in</string>
    <string name="nav_header_profilelist_prelogin_text">Please login&#8230;</string>
    <string name="var_base_currency">SGD</string>
    <string name="app_login_failed_message">Failed to login to eWise Moneyapp</string>
    <string name="welcome_message_providers_title">Add your providers</string>
    <string name="welcome_message_networth_title">View your net worth</string>
    <string name="welcome_message_accounts_title">Manage your accounts</string>
    <string name="welcome_message_budgets_title">Manage your spending</string>
    <string name="welcome_message_bills_title">Manage your bills</string>
    <string name="welcome_message_transfer_title">Transfer funds</string>
    <string name="welcome_message_providers_message">Add your account providers like banks, share brokers and other financial institutions where you have your credit cards, savings, deposits, loans, investments etc.</string>
    <string name="welcome_message_networth_message">Add your providers to view your financial net worth and breakdown across various categories</string>
    <string name="welcome_message_accounts_message">Add your providers to view the summary and detailed information about your accounts, such as balances, transaction history, cash-flow graphs etc.</string>
    <string name="welcome_message_budgets_message">
        "Categorise your transactions automatically, view your historic and future predicted spending patterns, setup spending budgets "
        "and get notified on significant events"
    </string>
    <string name="welcome_message_bills_message">Better manage your bills by adding your utility, telecoms and other online billers and view your monthly outstanding balances and payments</string>
    <string name="welcome_message_transfer_message">Transfer funds between your accounts with ease by using the eWise Money transfer funds feature.  This feature is available for selected institutions and allows you to transfer funds to your own accounts or predefined beneficiaries at those institutions</string>
    <string name="premium_feature_title">PREMIUM</string>
    <string name="premium_feature_annual_rate_message">ANNUAL 99.90 USD</string>
    <string name="premium_feature_monthly_rate_message">MONTHLY 9.90 USD</string>
    <string name="premium_feature_buy_button_text">Buy now</string>
    <string name="premium_feature_try_button_text">Try (10 days free trial)</string>
    <string name="fab_menu_add_provider">Add provider</string>
    <string name="fab_menu_manage_providers">Manage providers</string>
    <string name="fab_menu_user_profile">User profile</string>
    <string name="fab_menu_do_transfer">Transfer funds</string>
    <string name="fab_menu_set_consent">Set permissions</string>
    <string name="provider_menu_title">Select action</string>
    <string name="provider_menu_refresh_title">Sync provider</string>
    <string name="provider_menu_edit_title">Edit provider</string>
    <string name="provider_menu_delete_title">Delete provider</string>
    <string name="provider_menu_stop_title">Stop sync</string>
    <string name="provider_menu_setverify_title">Submit OTP</string>
    <string name="account_page_loading_msg">Loading, please wait&#8230;</string>
    <string name="label_account_fragment_CASH">Current and Savings</string>
    <string name="label_account_fragment_CREDIT">Credit Cards</string>
    <string name="label_account_fragment_LOAN">Loans</string>
    <string name="label_account_fragment_INVESTMENT">Investments</string>
    <string name="label_account_fragment_RETIREMENT">Retirement</string>
    <string name="label_account_fragment_PROPERTY">Property</string>
    <string name="label_account_fragment_INSURANCE">Insurance</string>
    <string name="label_account_fragment_REWARDS">Rewards</string>
    <string name="label_account_fragment_BILLS">Bills</string>
    <string name="label_account_fragment_OTHERASSETS">Other Assets</string>
    <string name="label_account_fragment_OTHERLIABILITIES">Other Liabilities</string>
    <string name="label_account_fragment_UNKNOWN">Unknown Products</string>
    <string name="label_account_card_menu_title">Menu</string>
    <string name="label_account_details_transactions">Transactions</string>
    <string name="label_account_details_cashflow">Cashflow</string>
    <string name="label_account_details_availbalance">Available balance</string>
    <string name="label_account_details_availbalance_CREDIT">Credit limit</string>
    <string name="label_account_details_availbalance_LOAN">Loan amount</string>
    <string name="pdv_account_category_CASH">CASH</string>
    <string name="pdv_account_category_OVERDRAFT">OVERDRAFT</string>
    <string name="pdv_account_category_CREDIT">CREDIT</string>
    <string name="pdv_account_category_LOAN">LOAN</string>
    <string name="pdv_account_category_MORTGAGE">MORTGAGE</string>
    <string name="pdv_account_category_INVESTMENT">INVESTMENT</string>
    <string name="pdv_account_category_INVESTLOAN">INVESTLOAN</string>
    <string name="pdv_account_category_SUPERANNUATION">SUPERANNUATION</string>
    <string name="pdv_account_category_PROPERTY">PROPERTY</string>
    <string name="pdv_account_category_INSURANCE">INSURANCE</string>
    <string name="pdv_account_category_TAX">TAX</string>
    <string name="pdv_account_category_EFFECTS">EFFECTS</string>
    <string name="pdv_account_category_ASSETS">ASSETS</string>
    <string name="pdv_account_category_LIABILITIES">LIABILITIES</string>
    <string name="pdv_account_category_UNKNOWN">UNKNOWN</string>
    <string name="api_transaction_date_format">yyyy-MM-dd</string>
    <string name="api_transaction_date_format_2">yyyyMMdd</string>
    <string name="transaction_groupby_day_format">yyyy-MM-dd</string>
    <string name="transaction_groupby_month_format">MMMM - yyyy</string>
    <string name="transaction_groupby_year_format">yyyy</string>
    <string name="transaction_filter_all">All</string>
    <string name="transaction_filter_forecast">Forecast</string>
    <string name="ewise_chart_line_width">3</string>
    <string name="ewise_chart_gridline_width">0.5</string>
    <string name="ewise_cashflow_linechart_max_x_axis_display_values">12</string>
    <string name="ewise_cashflow_linechart_max_y_axis_display_values">12</string>
    <string name="ewise_chart_description_text_size">14</string>
    <string name="ewise_chart_text_size">12.0</string>
    <string name="ewise_chart_legend_text_size">12.0</string>
    <string name="ewise_chart_axis_text_size">12.0</string>
    <string name="accountdetails_cashflow_linechart_cashflow_label">Cashflow</string>
    <string name="accountdetails_cashflow_linechart_balance_label">Balance</string>
    <string name="accountdetails_cashflow_linechart_description">Your account cashflow</string>
    <string name="accountdetails_cashflow_linechart_nodatatext">Cashflow data unavailable for this account</string>
    <string name="month_dropdown_format_string">%1$s-%2$s</string>
    <string name="exception_format_string">***EXCEPTION*** encountered in ***Type*** %1$s ***Method*** %2$s ***Error*** %3$s ***Object*** %4$s</string>
    <string name="title_activity_add_institution_prompts">Add Provider</string>
    <string name="pdv_api_fetching_data">Fetching data&#8230;</string>
    <string name="pdv_api_login_to_pdv">Logging in to PDV&#8230;</string>
    <string name="pdv_api_fetch_user_profile">Fetching user profile&#8230;</string>
    <string name="pdv_api_fetch_institutions">Fetching institutions&#8230;</string>
    <string name="pdv_api_fetch_accounts">Fetching accounts&#8230;</string>
    <string name="pdvapi_prelogin_message">About to Login to PDV</string>
    <string name="pdvapi_postlogin_message">Login status:</string>
    <string name="pdvapi_login_failed_message">Login Failed</string>
    <string name="pdvapi_not_loggedin">Not yet logged in to the Personal Data Vault</string>
    <string name="pdvapi_request_inprogress">A request is currently in progress, please wait&#8230;</string>
    <string name="pdvapi_login_success_message">Login Success</string>
    <string name="pdvapi_not_connected">Not connected to PDV Server, check your internet connection</string>
    <string name="pdvapi_get_institutions_message">Retrieving available institutions &#8230;</string>
    <string name="pdvapi_get_prompts_message">Retrieving prompts for institution&#8230;</string>
    <string name="pdvapi_on_getuserprofile_fail_message">Error: Failed to retrieve user profile due to error in PDV API call %1$s</string>
    <string name="pdvapi_on_getinstitution_fail_message">Error: Failed to retrieve institutions due to error in PDV API call %1$s</string>
    <string name="pdvapi_on_restore_transactions_fail_message">Error: Failed to retrieve transactions due to error %1$s </string>
    <string name="pdvapi_sync_status_message_not_applicable">NA</string>
    <string name="pdvapi_sync_status_message_ready">Ready to sync</string>
    <string name="pdvapi_sync_status_message_not_started">Sync pending&#8230;</string>
    <string name="pdvapi_sync_status_message_in_progress">Sync in progress&#8230;</string>
    <string name="pdvapi_sync_status_message_completed">Sync completed&#8230;</string>
    <string name="pdvapi_sync_status_message_in_progress_setverify">Sync in progress (OTP Required)</string>
    <string name="provider_credentials_not_on_device_message">Credentials not found in device</string>
    <string name="provider_list_retrieving_message">Retrieving&#8230;</string>
    <string name="default_institution_icon_resource_name">smartbank</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="share_data_button_text">Share Data</string>
    <string name="add_provider_button_text">Add Provider</string>
    <string name="settings_profiles_header">Profiles</string>
    <string name="settings_profiles_add_button_text">+ Add a new profile</string>
    <string name="settings_profiles_dialog_message">
        "Profiles help you separate your accounts as you see fit. "
        "for example you can create different profiles "
        "to separate your PERONAL, BUSINESS and FAMILY accounts "
    </string>
</resources>