<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/billsFragmentTopLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/ewise_border">

    <LinearLayout
        android:id="@+id/billsWelcomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/coloreWisePrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/ewise_welcome_desc_padding"
            android:paddingRight="@dimen/ewise_welcome_desc_padding"
            android:text="@string/premium_feature_title"
            android:textAlignment="center"
            android:textColor="@color/coloreWiseMainTextWhite"
            android:textSize="@dimen/ewise_heading_text_size_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/ewise_welcome_desc_padding"
            android:paddingRight="@dimen/ewise_welcome_desc_padding"
            android:text="@string/premium_feature_annual_rate_message"
            android:textAlignment="center"
            android:textColor="@color/coloreWiseMainTextWhite"
            android:textSize="@dimen/ewise_header_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/ewise_welcome_desc_padding"
            android:paddingRight="@dimen/ewise_welcome_desc_padding"
            android:text="@string/premium_feature_monthly_rate_message"
            android:textAlignment="center"
            android:textColor="@color/coloreWiseMainTextWhite"
            android:textSize="@dimen/ewise_welcome_desc_size"
            android:layout_marginBottom="@dimen/ewise_vertical_margin_large"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/budgetsWelcomeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/ewise_vertical_margin_large"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_bills_title"
            android:textColor="@color/coloreWiseMainTextBlack"
            android:textSize="@dimen/ewise_welcome_title_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/ewise_welcome_screen_image_size"
            android:layout_height="@dimen/ewise_welcome_screen_image_size"
            android:src="@drawable/ewise_welcome_image_bills"
            android:paddingTop="@dimen/ewise_welcome_title_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/ewise_horizontal_margin_large"
            android:paddingRight="@dimen/ewise_horizontal_margin_large"
            android:text="@string/welcome_message_bills_message"
            android:textAlignment="center"
            android:textColor="@color/coloreWiseMainTextBlack"
            android:textSize="@dimen/ewise_welcome_desc_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/ewise_vertical_margin"
            android:gravity="center|bottom"
            android:layout_marginBottom="@dimen/app_bar_height">


            <Button
                android:id="@+id/budgetsTryNowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_feature_try_button_text"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/coloreWisePrimary"
                android:textColorLink="@color/coloreWiseAccent"
                android:textStyle="italic"
                />

            <Button
                android:id="@+id/budgetsBuyNowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_feature_buy_button_text"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/coloreWiseMainTextWhite"
                android:textColorLink="@color/coloreWiseAccent"
                android:textStyle="italic"
                android:background="@color/coloreWisePrimary"
                android:layout_marginTop="@dimen/ewise_vertical_margin"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
