<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:id="@+id/budgetsWelcomeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/ewise_touch_icon_size_xl"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_budgets_title"
            android:textColor="@color/coloreWiseMainTextBlack"
            android:textSize="@dimen/ewise_welcome_title_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/ewise_welcome_screen_image_size"
            android:layout_height="@dimen/ewise_welcome_screen_image_size"
            android:src="@drawable/welcome_image_budgets"
            android:paddingTop="@dimen/ewise_welcome_title_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/ewise_welcome_desc_padding"
            android:paddingRight="@dimen/ewise_welcome_desc_padding"
            android:text="@string/welcome_message_budgets_message"
            android:textAlignment="center"
            android:textColor="@color/coloreWiseMainTextBlack"
            android:textSize="@dimen/ewise_welcome_desc_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ewise_vertical_margin_xl">

        <Button
            android:id="@+id/budgetsAddProviderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_provider_button_text"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/coloreWisePrimaryDark"
            android:textColorLink="@color/coloreWiseAccent"
            android:textStyle="italic" />

        <Button
            android:id="@+id/budgetsShareDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_data_button_text"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/coloreWisePrimaryDark"
            android:textColorLink="@color/coloreWiseAccent"
            android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
