<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/ewise_touch_icon_size"
            android:layout_height="wrap_content"
            android:id="@+id/provider_menu_refresh_icon"
            android:src="@drawable/ic_sync"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_menu_refresh_title"
            android:id="@+id/provider_menu_refresh_text"
            android:textSize="@dimen/ewise_primary_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/ewise_touch_icon_size"
            android:layout_height="wrap_content"
            android:id="@+id/provider_menu_edit_icon"
            android:src="@drawable/ic_action_edit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_menu_edit_title"
            android:id="@+id/provider_menu_edit_text"
            android:textSize="@dimen/ewise_primary_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/ewise_touch_icon_size"
            android:layout_height="wrap_content"
            android:id="@+id/provider_menu_delete_icon"
            android:src="@drawable/ic_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider_menu_delete_title"
            android:id="@+id/provider_menu_delete_text"
            android:textSize="@dimen/ewise_primary_text_size"/>

    </LinearLayout>



</LinearLayout>
